fixing navbar for authenticated users

--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -189,7 +189,7 @@ main {
 
 footer {
   height: 5vh;
-  background-color: #282847;
+  background-color: #1F1E3D;
   color: white;
   text-align: center;
 }
