--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -189,8 +189,9 @@ main {
 
 
 footer {
-  height: 5vh;
+  min-height: 5vh;
   background-color: #1F1E3D;
   color: white;
   text-align: center;
+  margin-bottom: 10px;
 }
