--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -174,6 +174,74 @@ main {
   color: black;
 }
 
+.register-form-group {
+  position: relative;
+}
+
+.register-form-group.success input {
+  border-color: #17b458;
+}
+
+.register-form-group.success .form-control:focus {
+  border-color: #17b458;
+  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
+}
+
+.register-form-group.failure input {
+  border-color: #da3826;
+}
+
+.register-form-group.failure .form-control:focus {
+  border-color: #da3826;
+  box-shadow: 0 0 0 0.2rem rgba(204, 11, 11, 0.25);
+}
+
+.register-form-group.success i.success-icon {
+  visibility: visible;
+  color: #17b458;
+}
+
+.register-form-group.failure i.failure-icon {
+  visibility: visible;
+  color: #da3826;
+}
+
+.register-form-group p {
+  min-height: 24px;
+  margin-left: 70px;
+}
+
+.register-form-group small {
+  visibility: hidden;
+}
+
+.register-form-group.success small {
+  visibility: visible;
+  color: #17b458;
+}
+
+.register-form-group.failure small {
+  visibility: visible;
+  color: #da3826;
+}
+
+.validation-icons {
+  position: absolute;
+  top: 38px;
+  right: 40px;
+  visibility: hidden;
+}
+
+.validation-error-div {
+  min-height: 24px;
+}
+
+.error-div {
+  color: #da3826;
+}
+
+
+
 /* footer */
 
 footer {
